PausedBasedAligner and russian audio model